--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -4,6 +4,8 @@
   padding: 45px 0 0 0;
   border-bottom: 1px solid rgba(33%, 33%, 33%, .7);
   box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
 }
 
 @media screen and (max-width: 880px) {
